# django-expenses

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
django_expenses/: __init__.py  admin.py  managers.py  models.py  permissions.py  services.py  signals.py  urls.py  workflow.py
django_expenses/api/: serializers.py  urls.py  views.py
django_expenses/migrations/: 0001_initial.py
django_expenses/tests/: test_managers.py  test_models.py  test_services.py  test_workflow.py
docs/: index.md
examples/: solar_plus_integration.py
examples/demo_project/: manage.py
examples/demo_project/demo_app/: signals.py
examples/demo_project/demo_project/: settings.py  urls.py
src/django_expenses/: admin.py  apps.py  constants.py  exceptions.py  receivers.py  settings.py  urls.py
src/django_expenses/api/: serializers.py  urls.py  views.py
src/django_expenses/data/: default_categories.py
src/django_expenses/hooks/: __init__.py
src/django_expenses/management/commands/: load_expense_template.py  seed_expense_categories.py
src/django_expenses/managers/: __init__.py  expense_query.py
src/django_expenses/migrations/: 0001_initial.py  0002_expensecategory_depreciation_rate_and_more.py
src/django_expenses/models/: __init__.py  approval.py  attachment.py  category.py  comment.py  cost_center.py  expense.py  payment.py
src/django_expenses/permissions/: __init__.py
src/django_expenses/services/: __init__.py  expense_service.py  report_service.py
src/django_expenses/templates/django_expenses/: expense_confirm_delete.html  expense_detail.html  expense_form.html  expense_list.html
src/django_expenses/tests/: settings.py  test_api.py  test_managers.py  test_models.py  test_services.py  test_workflow.py
src/django_expenses/workflows/: __init__.py  expense_workflow.py
