[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "django-expenses"
version = "0.1.0"
description = "A professional, reusable expense engine for Django — workflow, API, admin, permissions, signals."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Solar Plus ERP", email = "dev@solarplus.app"},
]
keywords = ["django", "expenses", "expense-management", "workflow", "erp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=5.0",
]

[project.optional-dependencies]
drf = ["djangorestframework>=3.15"]
filter = ["django-filter>=24.1"]
api = ["django-expenses[drf,filter]"]
dev = ["pytest>=8", "pytest-django>=4", "factory-boy>=3", "coverage>=7"]

[project.urls]
Homepage = "https://github.com/solarplus/django-expenses"
Documentation = "https://django-expenses.readthedocs.io/"
Issues = "https://github.com/solarplus/django-expenses/issues"

[tool.setuptools.packages.find]
include = ["django_expenses*"]
